Simplify pfa firstboot service
Change-Id: I9a9a0a64f09adea1bd1fbf28bbfe0a8faf41b7d4

--- a/pfa-init/pfa.rc
+++ b/pfa-init/pfa.rc
@@ -1,16 +1,13 @@
-# WIP
+#
+# Copyright (C) 2025 Levi Zim
+#
+# SPDX-License-Identifier: GPL-3.0-Only
+#
 
 service pfa-firstboot /system/bin/pfa-firstboot
-    loglevel 7
     seclabel u:r:pfa:s0
     class main
     user root
     group root
     oneshot
     on post-fs-data
-
-on property:vendor.pfa-firstboot=1
-    start pfa-firstboot
-
-on property:vendor.pfa-firstboot=0
-    stop pfa-firstboot
