Fix pfa-firstboot for 22.2
Change-Id: I8a756e7e56ca2f6880b18d07f2724c8d1c8d4c3e

--- a/pfa-init/pfa.rc
+++ b/pfa-init/pfa.rc
@@ -5,7 +5,7 @@
 #
 
 service pfa-firstboot /system/bin/pfa-firstboot
-    seclabel u:r:pfa:s0
+    seclabel u:r:su:s0
     class main
     user root
     group root
